fix: update crate metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ categories = ["parser-implementations", "encoding"]
 description = "A parser for git repo urls based on url crate"
 documentation = "https://docs.rs/git-url-parse"
 edition = "2021"
-keywords = ["git", "url", "parsing", "normalize"]
+keywords = ["parse", "git", "url"]
 license = "MIT"
 name = "git-url-parse"
 readme = "README.md"
-repository = "https://github.com/tjtelan/git-url-parse-rs"
+repository = "https://github.com/EricCrosson/parse-git-url"
 version = "0.4.4"
 
 [dependencies]
