--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,34 @@
 [package]
+name = "git-url-parse"
+version = "0.4.4"
+edition = "2021"
 authors = [
   "T.J. Telan <t.telan@gmail.com>",
   "Eric Crosson <eric.s.crosson@utexas.edu>"
 ]
-categories = ["parser-implementations", "encoding"]
-description = "A parser for git repo urls based on url crate"
-documentation = "https://docs.rs/git-url-parse"
-edition = "2021"
-keywords = ["parse", "git", "url"]
 license = "MIT"
-name = "git-url-parse"
+description = "A parser for git repo urls based on url crate"
 readme = "README.md"
+homepage = "https://github.com/EricCrosson/parse-git-url"
 repository = "https://github.com/EricCrosson/parse-git-url"
-version = "0.4.4"
+keywords = ["parse", "git", "url"]
+categories = ["parser-implementations", "encoding"]
+documentation = "https://docs.rs/git-url-parse"
+exclude = [
+  "/.envrc",
+  "/.github",
+  "/.gitignore",
+  "/.releaserc.json",
+  "/CHANGELOG.md",
+  "/flake.{lock,nix}",
+  "/package{,-lock}.json",
+  "/node_modules"
+]
+
+[lib]
+name = "git_url_parse"
+path = "src/lib.rs"
+
 
 [dependencies]
 tracing = "0.1"
